fix: key_down animation overlap fix

--- a/css/vkeyboard.css
+++ b/css/vkeyboard.css
@@ -72,6 +72,7 @@ upchar {
     -o-transform: scale(1.1);
     transform: scale(1.1);
     transition: all .1s ease-in-out;
+    z-index: 1;
 }
 
 .free {
@@ -81,6 +82,7 @@ upchar {
     -o-transform: scale(1);
     transform: scale(1);
     transition: all .1s ease-in-out;
+    z-index: 0;
 }
 
 .wrapper {
